Tests/DependencyInjection/Fixtures/annotations/inject/valid/FooClassConstructorInjection1.php
<?php
/** @Service("constructor.injection1") */
class FooClassConstructorInjection1
{
    /** @Inject */
    public function __construct($fooService)
    {

    }
}
